@@ -1125,6 +1125,19 @@
         setwd(cwd)
     }
     if (!dir.exists(lib) || file.access(lib, 2L))
+    ok <- .file_test("-d", lib)
+    if (ok) {
+        if(WINDOWS) {
+            ## file.access is unreliable on Windows
+            ## the only known reliable way is to try it
+            fn <- file.path(lib, "_test_dir_")
+            unlink(fn, recursive = TRUE) # precaution
+            res <- try(dir.create(fn, showWarnings = FALSE))
+            if(inherits(res, "try-error") || !res) ok <- FALSE
+            else unlink(fn, recursive = TRUE)
+        } else ok <- file.access(lib, 2L) == 0
+    }
+    if(!ok)
         stop("ERROR: no permission to install to directory ",
              sQuote(lib), call. = FALSE)
 
